--- a/package.json
+++ b/package.json
@@ -14,18 +14,15 @@
     "@remix-run/node": "^1.7.6",
     "@remix-run/react": "^1.7.6",
     "@remix-run/serve": "^1.7.6",
-    "clsx": "^1.2.1",
     "cryptr": "^6.0.3",
     "dotenv": "^16.0.3",
     "is-string": "^1.0.7",
     "isbot": "^3.6.5",
-    "nice-react-ticker": "^2.1.0",
     "node-fetch": "^3.3.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "react-moment": "^1.1.2",
     "react-string-replace": "^1.1.0",
     "react-ticker": "^1.3.2",
     "react-timestamp": "^6.0.0",
@@ -34,8 +31,7 @@
     "remix-auth-twitch": "^1.1.0",
     "remix-utils": "^4.1.0",
     "tiny-invariant": "^1.3.1",
-    "twitch-api-v5": "^2.0.4",
-    "validator": "^13.7.0"
+    "twitch-api-v5": "^2.0.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.6",
