--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "node-fetch": "^3.3.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-autocomplete-input": "^1.0.19",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-since": "^1.3.1",
     "react-string-replace": "^1.1.0",
     "react-timestamp": "^6.0.0",
     "react-twitch-embed": "^3.0.1",
